Fix width overflow

--- a/index.css
+++ b/index.css
@@ -10,7 +10,6 @@ body{
 
 header{
     height: 100dvh;
-    width: 100dvw;
     background-color: #800000;
     display: flex;
     flex-direction: column;
@@ -37,7 +36,7 @@ button {
 }
 
 .launch-main-container{
-    height: 80%;
+    /* height: 80%; */
     display: flex;
     flex-direction: column;
     justify-content: center;
